      
      \item The list returned by diagram \code{diagram()} now includes a
      \code{predominant.values} component, which has the affinities of the
      predominant species at each grid point. This can be used as shown in the
      \code{multi-metal.Rmd} vignette to compute the Pourbaix energy
      (Δ\emph{G}\s{pbx}) for a metastable material.

      \item Remove the \samp{lty.aq} and \samp{lty.cr} arguments from
      \code{diagram()}.

    }
  }

  \subsection{OTHER CHANGES}{
    \itemize{

      \item Fix \samp{palply.Rd} for new warning about \dQuote{Non-file
        package-anchored link(s) in documentation object} in \command{R CMD
        check}.

      \item Convert this NEWS file to Rd format.

    }
  }

  \subsection{TODO}{
    \itemize{

      \item TODO: fix error in expr.species("AsO4---")

      \item TODO: make a site for community uploaded data

      \item TODO: refresh extdata/supcrt/compare.R

      \item TODO: get arsenopyrite from Perfetti et al., 2008

      \item TODO: make separate directories for default and optional data files

      \item TODO: diagram(): make error or warning for NA values of affinity

      \item TODO: move protein.equil() example (previously in equilibrium.Rnw) to JMDplots.

      \item TODO: change add.obigt --> add.OBIGT on website (Fe-O-H-S example) when package is submitted to CRAN.

      \item TODO: move extdata/bison to JMDplots package.

      \item TODO: remove extdata/refseq (now in JMDplots).

      \item TODO: OBIGT.Rmd: change "CHNOSZ" references to "OBIGT".

      \item TODO: add elements from RH95.

      \item TODO: add check to mosaic() that 'predominant' values have the right dimensions.

      \item TODO: remove stopifnot() from examples.

      \item TODO: get water limits on logfO2-logfS2 diagram (multi-metal.Rmd)

      \item TODO: anintro.Rmd, help files: make it clear that species with
      different units (cal, J) in OBIGT can be used in subcrt, diagrams, etc.
      in CHNOSZ.
